changed build script and pom.xml